samples/_failures_safe/1761530879_924a99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10013a37.c: In function ‘main’:
./samples/SAFE/__tmp_10013a37.c:151:9: error: expected declaration or statement at end of input
  151 |         }
      |         ^
./samples/SAFE/__tmp_10013a37.c:151:9: error: expected declaration or statement at end of input
